# ml-dsa-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
benches/: benchmark.rs
dudect/: Cargo.toml
dudect/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_all.rs
src/: algs.rs  conversion.rs  encodings.rs  hashing.rs  helpers.rs  high_low.rs  lib.rs  ml_dsa.rs  ntt.rs  smoke_test.rs  test_vectors.rs  traits.rs  types.rs
tests/: integration.rs  test_vectors.rs
