[package]
name = "ml-dsa-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 204 (draft): Module-Lattice-Based Digital Signature"
repository = "https://github.com/integritychain/ml-dsa-rs"
exclude = [".idea/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
