[package]
name = "ml-dsa-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 204 (draft): Module-Lattice-Based Digital Signature"
repository = "https://github.com/integritychain/ml-dsa-rs"
exclude = [".idea/*"]
rust-version = "1.73"


[dependencies]
sha3 = "0.10.8"
rand_core = { version = "0.6.4", default-features = false }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

[features]
default = ["default-rng"]
default-rng = ["rand_core/getrandom"]

[dev-dependencies]
rand = "0.8.5"
regex = "1.10.2"
hex = "0.4.3"
